--- a/portfolio-react-app/src/styles/_works.scss
+++ b/portfolio-react-app/src/styles/_works.scss
@@ -1,10 +1,15 @@
 .works-entry-content {
-    background-color: grey;
+    background-color: rgb(220, 220, 220);
+    color: black;
     border-radius: 0.5rem;
     position: absolute;
-    top: 0;
+    top: 0; 
     z-index: 10;
     margin: 0 1rem;
+    height: 90vh;
+    width: 90vw;
+    overflow: auto;
+
 
     .close-button {
         position: absolute;
