--- a/portfolio-react-app/src/styles/_singleWork.scss
+++ b/portfolio-react-app/src/styles/_singleWork.scss
@@ -1,7 +1,28 @@
 .work-entry-content {
     background-color: rgb(202, 202, 202);
+    color: black;
+    border-radius: 0.5rem;
     position: absolute;
-    z-index: 1000;
+    top: 1rem;
+    left: 1rem;
+    z-index: 100;
+    height: 90vh;
+    width: 90vw;
+    overflow: auto;
+    margin: 0 1rem;
 
 
+    .hide-tab {
+        display: none;
+    }
+    
+    .show-tab {
+        display: block;
+    }
+
+    .close-button {
+        position: absolute;
+        right: 0;
+        top: 0.5rem;
+    }
 }
