--- a/portfolio-react-app/src/styles/_singleWork.scss
+++ b/portfolio-react-app/src/styles/_singleWork.scss
@@ -2,15 +2,33 @@
     background-color: rgb(202, 202, 202);
     color: black;
     border-radius: 0.5rem;
+    border: 2px solid black;
     position: absolute;
     top: 1rem;
-    left: 1rem;
+    left: 0.6rem;
     z-index: 100;
     height: 90vh;
     width: 90vw;
     overflow: auto;
     margin: 0 1rem;
 
+    .tab-nav {
+        list-style: none;
+        display: flex;
+    }
+
+    .overview-heading {
+        margin-right: 1rem;
+    }
+
+    h2 {
+        text-align: center;
+        margin: 0;
+    }
+
+    p, a, h3 {
+        margin: 1rem 1.5rem;
+    }
 
     .hide-tab {
         display: none;
@@ -25,4 +43,5 @@
         right: 0;
         top: 0.5rem;
     }
+
 }
