--- a/portfolio-react-app/src/styles/_works.scss
+++ b/portfolio-react-app/src/styles/_works.scss
@@ -2,6 +2,7 @@
     background-color: rgb(220, 220, 220);
     color: black;
     border-radius: 0.5rem;
+    border: 2px solid black;
     position: absolute;
     top: 0; 
     z-index: 10;
@@ -9,7 +10,6 @@
     height: 90vh;
     width: 90vw;
     overflow: auto;
-
 
     .close-button {
         position: absolute;
