--- a/portfolio-react-app/src/styles/_about.scss
+++ b/portfolio-react-app/src/styles/_about.scss
@@ -1,5 +1,15 @@
 .about-entry-content {
-    
+    background-color: rgb(220, 220, 220);
+    color: black;
+    border-radius: 0.5rem;
+    border: 2px solid black;
+    position: absolute;
+    top: 0; 
+    z-index: 10;
+    margin: 0 1rem;
+    height: 90vh;
+    width: 90vw;
+    overflow: auto;
 
     .hide-tab {
         display: none;
@@ -8,4 +18,39 @@
     .show-tab {
         display: block;
     }
+
+    .tab-nav {
+        list-style: none;
+        display: flex;
+    }
+    
+    .background-heading {
+        margin-right: 1rem;
+    }
+
+    .stack-heading {
+        margin-right: 1rem;
+    }
+
+    .close-button {
+        position: absolute;
+        right: 0;
+        top: 0.5rem;
+    }
+
+    h1 {
+        text-align: center;
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    h2 {
+        text-align: center;
+        margin: 0;
+    }
+
+    p, a, h3 {
+        margin: 1rem 1.5rem;
+    }
+
 }
