--- a/portfolio-react-app/src/styles/_works.scss
+++ b/portfolio-react-app/src/styles/_works.scss
@@ -18,7 +18,7 @@
     }
 
     .all-works img {
-        max-width: 30%;
+        max-width: 70%;
     }
 
     h1 {
@@ -34,8 +34,8 @@
     }
 
     .all-works {
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: 50% 50%;    
     }
 
 }
