--- a/portfolio-react-app/src/styles/_contact.scss
+++ b/portfolio-react-app/src/styles/_contact.scss
@@ -13,19 +13,56 @@
 
     .close-button {
         position: absolute;
-        right: 0;
-        top: 0.5rem;
+        right: -0.8rem;
+        top: 0rem;
     }
 
     .tab-nav {
         list-style: none;
         display: flex;
+        padding-inline-start: 0rem;
+        margin: 0.5rem 0;
+        margin-bottom: 0;
+        font-size: 14px;
     }
 
-    h1 {
-        text-align: center;
-        font-size: 2rem;
-        margin-bottom: 1rem;
+    .contact-heading-container {
+        background-color: white;
+        padding: 0.3rem;
+        border-top: 1.5px solid black;
+        border-bottom: 1.5px solid black;
+    }
+
+    .contact-tab {
+        border-right: 1.5px black solid;
+        border-left: 1.5px black solid;
+        border-top: 1.5px black solid;
+        border-top-right-radius: 1rem;
+        border-top-left-radius: 1rem;
+        margin-bottom: 0;
+        padding: 0.1rem 1.5rem;
+    }
+
+    .contact-heading {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border: 1.5px solid black;
+        margin: 0 0.5rem;
+        border-radius: 0.5rem;
+
+        h1 {
+            text-align: center;
+            font-size: 1.5rem;
+            font-weight: 200;
+            margin: 0 auto;
+            padding-right: 0.75rem;
+        }
+
+        .search-icon {
+            max-width: 1.5rem;
+            margin-left: 0.5rem;
+        }
     }
 
     h2 {
