--- a/portfolio-react-app/src/styles/_singleWork.scss
+++ b/portfolio-react-app/src/styles/_singleWork.scss
@@ -11,14 +11,66 @@
     width: 90vw;
     overflow: auto;
     margin: 0 1rem;
+    font-size: 14px;
+
 
     .tab-nav {
         list-style: none;
         display: flex;
+        padding-inline-start: 0rem;
+        margin: 0.5rem 0;
+        margin-bottom: 0;
+        font-size: 14px;
     }
 
     .overview-heading {
-        margin-right: 1rem;
+        border-right: 1.5px black solid;
+        border-left: 1.5px black solid;
+        border-top: 1.5px black solid;
+        border-top-right-radius: 1rem;
+        border-top-left-radius: 1rem;
+        margin-bottom: 0;
+        padding: 0.1rem 1.5rem;
+    }
+
+    .process-heading {
+        border-right: 1.5px black solid;
+        border-left: 1.5px black solid;
+        border-top: 1.5px black solid;
+        border-top-right-radius: 1rem;
+        border-top-left-radius: 1rem;
+        margin-bottom: 0;
+        padding: 0.1rem 1.65rem;
+    }
+  
+    .work-container {
+        background-color: white;
+        padding: 0.3rem;
+        border-top: 1.5px solid black;
+        border-bottom: 1.5px solid black;
+    }
+
+    .work-heading {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border: 1.5px solid black;
+        margin: 0 0.5rem;
+        border-radius: 0.5rem;
+
+        h1 {
+            text-align: center;
+            font-size: 1.5rem;
+            font-weight: 200;
+            margin: 0 auto;
+            padding-right: 0.75rem;
+        }
+
+        .search-icon {
+            max-width: 1.5rem;
+            margin-left: 0.5rem;
+        }
+
     }
 
     h2 {
@@ -40,8 +92,31 @@
 
     .close-button {
         position: absolute;
-        right: 0;
+        right: 0.3rem;
         top: 0.5rem;
+        padding: 0;
     }
 
+    .links {
+        text-align: center;
+
+        a {
+            background-color: rgb(218, 218, 255);
+            padding: 0.5rem;
+            border: 1.5px black solid;
+            border-radius: 0.5rem;
+            margin: 0.2rem;
+        }
+    }
+
+    .work-details {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 1rem;
+
+        h3 {
+            text-align: center;
+        }
+    }
 }
