styled modals, added accordian for faq

--- a/portfolio-react-app/src/styles/_contact.scss
+++ b/portfolio-react-app/src/styles/_contact.scss
@@ -1,3 +1,5 @@
+@use 'variables' as *;
+
 .contact-entry-content {
     background-color: rgb(220, 220, 220);
     color: black;
@@ -41,6 +43,7 @@
         border-top-left-radius: 1rem;
         margin-bottom: 0;
         padding: 0.1rem 1.5rem;
+        background-color: $pink;
     }
 
     .contact-heading {
@@ -72,6 +75,18 @@
 
     p, a, h3 {
         margin: 1rem 1.5rem;
+    }
+
+    a {
+        background-color: $light-purple;
+        padding: 0.5rem;
+        border: 1.5px black solid;
+        border-radius: 0.5rem;
+    }
+
+    .links {
+        text-align: center;  
+        margin-top: 2rem;  
     }
 
 }
