--- a/portfolio-react-app/src/styles/_variables.scss
+++ b/portfolio-react-app/src/styles/_variables.scss
@@ -4,7 +4,11 @@
 
 
 // colors
-
+$text-color: #383C7A;
+$background-color: #EAEFFB;
+$light-purple: #BFC1E1;
+$light-blue: #ACC3F2;
+$pink: #FBC6BF;
 
 // Break Points
 $mobile: 20.625em; // 330px
