--- a/portfolio-react-app/src/styles/_about.scss
+++ b/portfolio-react-app/src/styles/_about.scss
@@ -1,3 +1,5 @@
+@use 'variables' as *;
+
 .about-entry-content {
     background-color: rgb(220, 220, 220);
     color: black;
@@ -26,6 +28,10 @@
         margin: 0.5rem 0;
         margin-bottom: 0;
         font-size: 14px;
+
+        li.active {
+            background-color: $pink;
+        }
     }
 
     .stack-heading {
@@ -109,7 +115,7 @@
         align-items: center;
     }
 
-    .down-arrow {
+    .down-arrow, .up-arrow {
         margin: 1rem;
     }
 
@@ -120,9 +126,9 @@
 
         p{
             background-color: rgb(218, 218, 255);
-            padding: 0.5rem;
+            padding: 0.3rem;
             border: 1.5px black solid;
-            border-radius: 1rem;
+            border-radius: 0.5rem;
             margin: 0.2rem;
         }
     }
@@ -130,5 +136,5 @@
     li {
         list-style: none;
     }
-}
 
+}
