--- a/portfolio-react-app/src/styles/_singleWork.scss
+++ b/portfolio-react-app/src/styles/_singleWork.scss
@@ -1,5 +1,7 @@
+@use 'variables' as *;
+
 .work-entry-content {
-    background-color: rgb(202, 202, 202);
+    background-color: $background-color;
     color: black;
     border-radius: 0.5rem;
     border: 2px solid black;
@@ -21,6 +23,10 @@
         margin: 0.5rem 0;
         margin-bottom: 0;
         font-size: 14px;
+
+         li.active {
+            background-color: $pink;
+         }
     }
 
     .overview-heading {
@@ -44,7 +50,7 @@
     }
   
     .work-container {
-        background-color: white;
+        background-color: $light-blue;
         padding: 0.3rem;
         border-top: 1.5px solid black;
         border-bottom: 1.5px solid black;
@@ -101,7 +107,8 @@
         text-align: center;
 
         a {
-            background-color: rgb(218, 218, 255);
+            background-color: $light-purple;
+            color: black;
             padding: 0.5rem;
             border: 1.5px black solid;
             border-radius: 0.5rem;
