--- a/portfolio-react-app/src/styles/_works.scss
+++ b/portfolio-react-app/src/styles/_works.scss
@@ -1,5 +1,7 @@
+@use 'variables' as *;
+
 .works-entry-content {
-    background-color: rgb(220, 220, 220);
+    background-color: $background-color;
     color: black;
     border-radius: 0.5rem;
     border: 2px solid black;
@@ -13,8 +15,9 @@
 
     .close-button {
         position: absolute;
-        right: 0;
+        right: 0.3rem;
         top: 0.5rem;
+        padding: 0;
     }
 
     .all-works img {
@@ -24,6 +27,10 @@
     h1 {
         text-align: center;
         font-size: 2rem;
+        font-weight: 500;
+        margin: 0;
+        padding: 0.5rem;
+        background-color: $light-blue;
         margin-bottom: 1rem;
     }
 
