--- a/portfolio-react-app/src/styles/_about.scss
+++ b/portfolio-react-app/src/styles/_about.scss
@@ -1,7 +1,7 @@
 @use 'variables' as *;
 
 .about-entry-content {
-    background-color: rgb(220, 220, 220);
+    background-color: $background-color;
     color: black;
     border-radius: 0.5rem;
     border: 2px solid black;
@@ -72,7 +72,7 @@
     }
 
     .about-heading-container {
-        background-color: white;
+        background-color: $background-color;
         padding: 0.3rem;
         border-top: 1.5px solid black;
         border-bottom: 1.5px solid black;
@@ -106,12 +106,12 @@
     }
 
     p, a, h3 {
-        margin: 1rem 1.5rem;
+        margin: 0.5rem 1.5rem;
     }
 
     .question-heading {
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: 80% 20%;        
         align-items: center;
     }
 
@@ -130,6 +130,7 @@
             border: 1.5px black solid;
             border-radius: 0.5rem;
             margin: 0.2rem;
+            font-size: 14px;
         }
     }
 
