--- a/portfolio-react-app/src/styles/_home.scss
+++ b/portfolio-react-app/src/styles/_home.scss
@@ -5,7 +5,9 @@
         text-align: center;
 
         h1 {
-            margin-bottom: 0.25rem;
+            margin: 1rem;
+            margin-top: 2rem;
+            font-weight: 500;
         }
 
         p {
