--- a/portfolio-react-app/src/styles/_singleWork.scss
+++ b/portfolio-react-app/src/styles/_singleWork.scss
@@ -15,7 +15,6 @@
     margin: 0 1rem;
     font-size: 14px;
 
-
     .tab-nav {
         list-style: none;
         display: flex;
@@ -50,7 +49,7 @@
     }
   
     .work-container {
-        background-color: $light-blue;
+        background-color: $background-color;
         padding: 0.3rem;
         border-top: 1.5px solid black;
         border-bottom: 1.5px solid black;
@@ -117,13 +116,7 @@
     }
 
     .work-details {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
         margin-top: 1rem;
 
-        h3 {
-            text-align: center;
-        }
     }
 }
