--- a/portfolio-react-app/src/styles/_about.scss
+++ b/portfolio-react-app/src/styles/_about.scss
@@ -8,7 +8,7 @@
     position: absolute;
     top: 0; 
     z-index: 10;
-    margin: 0 1rem;
+    // margin: 0 1rem;
     height: 90vh;
     width: 90vw;
     overflow: auto;
@@ -31,6 +31,7 @@
 
         li.active {
             background-color: $pink;
+            font-weight: bold;
         }
     }
 
@@ -89,9 +90,10 @@
         h1 {
             text-align: center;
             font-size: 1.5rem;
-            font-weight: 200;
+            font-weight: 500;
             margin: 0 auto;
             padding-right: 0.75rem;
+            text-transform: lowercase;
         }
 
         .search-icon {
@@ -109,16 +111,31 @@
         margin: 0.5rem 1.5rem;
     }
 
-    .question-heading {
-        display: grid;
-        grid-template-columns: 80% 20%;        
-        align-items: center;
+    // background section
+    .experiences {
+        position: relative;
     }
 
-    .down-arrow, .up-arrow {
-        margin: 1rem;
+    .timeline-line {
+        background-color: $light-blue;
+        padding: 0.25rem;
+        position: absolute;
+        left: 2rem;
+        height: 100%;
+        top: 0;
     }
 
+    .star-icon {
+        position: absolute;
+        left: 1.25rem;
+        z-index: 10;
+        background: white;
+        border-radius: 1rem;
+        padding: 0.25rem;
+        fill: $light-blue;
+    }
+
+    // stack section
     .skills {
         display: flex;
         flex-wrap: wrap;
@@ -138,4 +155,14 @@
         list-style: none;
     }
 
+    // faq section
+    .question-heading {
+        display: grid;
+        grid-template-columns: 80% 20%;        
+        align-items: center;
+    }
+
+    .down-arrow, .up-arrow {
+        margin: 1rem;
+    }
 }
