--- a/portfolio-react-app/src/styles/_contact.scss
+++ b/portfolio-react-app/src/styles/_contact.scss
@@ -8,7 +8,7 @@
     position: absolute;
     top: 0; 
     z-index: 10;
-    margin: 0 1rem;
+    // margin: 0 1rem;
     height: 60vh;
     width: 90vw;
     overflow: auto;
@@ -44,6 +44,7 @@
         margin-bottom: 0;
         padding: 0.1rem 1.5rem;
         background-color: $pink;
+        font-weight: bold;
     }
 
     .contact-heading {
@@ -57,9 +58,10 @@
         h1 {
             text-align: center;
             font-size: 1.5rem;
-            font-weight: 200;
+            font-weight: 500;
             margin: 0 auto;
             padding-right: 0.75rem;
+            text-transform: lowercase;
         }
 
         .search-icon {
@@ -82,6 +84,7 @@
         padding: 0.5rem;
         border: 1.5px black solid;
         border-radius: 0.5rem;
+        color: black;
     }
 
     .links {
