--- a/portfolio-react-app/src/styles/_footer.scss
+++ b/portfolio-react-app/src/styles/_footer.scss
@@ -1,5 +1,8 @@
+@use 'variables' as *;
+
 footer {
-    background-color: lightgray;
+    background-color: $light-blue;
     padding: 0.3rem;
     text-align: center;
+    margin: 0;
 }
