--- a/portfolio-react-app/src/styles/_singleWork.scss
+++ b/portfolio-react-app/src/styles/_singleWork.scss
@@ -25,6 +25,7 @@
 
          li.active {
             background-color: $pink;
+            font-weight: bold;
          }
     }
 
@@ -66,9 +67,10 @@
         h1 {
             text-align: center;
             font-size: 1.5rem;
-            font-weight: 200;
+            font-weight: 500;
             margin: 0 auto;
             padding-right: 0.75rem;
+            text-transform: lowercase;
         }
 
         .search-icon {
