--- a/portfolio-react-app/src/styles/_works.scss
+++ b/portfolio-react-app/src/styles/_works.scss
@@ -8,7 +8,7 @@
     position: absolute;
     top: 0; 
     z-index: 10;
-    margin: 0 1rem;
+    // margin: 0 1rem;
     height: 90vh;
     width: 90vw;
     overflow: auto;
