--- a/portfolio-react-app/src/styles/_footer.scss
+++ b/portfolio-react-app/src/styles/_footer.scss
@@ -2,6 +2,7 @@
 
 footer {
     background-color: $light-blue;
+    color: $text-color;
     padding: 0.3rem;
     text-align: center;
     margin: 0;
