--- a/portfolio-react-app/src/styles/_about.scss
+++ b/portfolio-react-app/src/styles/_about.scss
@@ -2,7 +2,7 @@
 
 .about-entry-content {
     background-color: $background-color;
-    color: black;
+    color: $text-color;
     border-radius: 0.5rem;
     border: 2px solid black;
     position: absolute;
