--- a/portfolio-react-app/src/styles/_splash.scss
+++ b/portfolio-react-app/src/styles/_splash.scss
@@ -1,7 +1,16 @@
 @use 'variables' as *;
 
 body {
-    background-color: $background-color;
+    background-color: white;
+    color: $text-color;
+}
+
+.splash-content {
+    position: absolute;
+    bottom: 5rem;
+    text-align: center;
+    right: 0;
+    left: 0;
 }
 
 .splash-page {
@@ -18,5 +27,6 @@ body {
 
     button {
         background-color: $light-purple;
+        color: $text-color;
     }
 }
