--- a/portfolio-react-app/src/styles/_splash.scss
+++ b/portfolio-react-app/src/styles/_splash.scss
@@ -2,7 +2,7 @@
 
 body {
     background-color: white;
-    color: $text-color;
+    color: black;
 }
 
 .splash-content {
@@ -27,6 +27,5 @@ body {
 
     button {
         background-color: $light-purple;
-        color: $text-color;
     }
 }
