--- a/portfolio-react-app/src/styles/_splash.scss
+++ b/portfolio-react-app/src/styles/_splash.scss
@@ -27,5 +27,56 @@ body {
 
     button {
         background-color: $light-purple;
+        padding: 0.5rem;
+    }
+
+    // 324px
+    @media (min-width: 20.25em) {
+        h1{
+            margin: 0 2rem;
+        }
+    }
+
+    // 388px 
+    @media (min-width: 20.25em) {
+        .splash-content{
+            bottom: 10rem;
+        }
+    }
+
+    // 768px tablet
+    @media (min-width: 48em) {
+        .splash-content{
+            top: 9rem;
+        }
+        
+        img {
+            width: 32rem;
+        }
+    }
+
+    // 1024px laptop
+    @media (min-width: 48em) {
+        h1 {
+            font-size: 4rem;
+        }
+
+        p{
+            font-size: 1.5rem;
+            margin: 0.75rem;
+        }
+        
+        button {
+            font-size: 1.3rem;
+            padding: 0.75rem;
+        }
+        
+        .splash-content{
+            top: 13rem;
+        }
+        
+        img {
+            width: 40rem;
+        }
     }
 }
