changed colour to purple for works

--- a/portfolio-react-app/src/styles/_variables.scss
+++ b/portfolio-react-app/src/styles/_variables.scss
@@ -6,7 +6,7 @@
 // colors
 $text-color: #383C7A;
 $background-color: #EAEFFB;
-$light-purple: #BFC1E1;
+$light-purple: #c8cbfd;
 $light-blue: #ACC3F2;
 $pink: #FBC6BF;
 
