--- a/portfolio-react-app/src/styles/_splash.scss
+++ b/portfolio-react-app/src/styles/_splash.scss
@@ -17,7 +17,7 @@ body {
     text-align: center;
     h1 {
         font-weight: 400;
-        margin: 0;
+        margin: 0 2rem;
     }
 
     img {
@@ -30,35 +30,51 @@ body {
         padding: 0.5rem;
     }
 
-    // 324px
-    @media (min-width: 20.25em) {
+}
+
+// 324px
+@media (min-width: 20.25em) {
+    .splash-content{
+        bottom: 5rem;
+
+    .splash-page{
         h1{
             margin: 0 2rem;
         }
     }
+    }
+}
 
-    // 388px 
-    @media (min-width: 20.25em) {
-        .splash-content{
-            bottom: 10rem;
-        }
+// 388px 
+@media (min-width: 24.25em) {
+    .splash-content{
+        bottom: 10rem;
+    }
+}
+
+// 768px tablet
+@media (min-width: 48em) {
+    .splash-content{
+        bottom: 10rem;
     }
 
-    // 768px tablet
-    @media (min-width: 48em) {
-        .splash-content{
-            top: 9rem;
-        }
-        
+    .splash-page {
+
         img {
             width: 32rem;
+            position: relative;
+            right: 0;
+            left: 0;
+            top: -12rem;
         }
     }
+}
 
-    // 1024px laptop
-    @media (min-width: 48em) {
+// 1024px laptop
+@media (min-width: 64em) {
+    .splash-page {
         h1 {
-            font-size: 4rem;
+        font-size: 4rem;
         }
 
         p{
@@ -71,12 +87,13 @@ body {
             padding: 0.75rem;
         }
         
-        .splash-content{
-            top: 13rem;
-        }
-        
         img {
-            width: 40rem;
+            width: 45rem;
+            top: -23rem;
         }
+    }
+
+    .splash-content{
+        bottom: 11rem;
     }
 }
