--- a/portfolio-react-app/src/styles/_works.scss
+++ b/portfolio-react-app/src/styles/_works.scss
@@ -25,7 +25,7 @@
         font-weight: 500;
         margin: 0;
         padding: 0.5rem;
-        background-color: $light-blue;
+        background-color: $light-purple;
         margin-bottom: 1rem;
     }
 
