changed pink on about

--- a/portfolio-react-app/src/styles/_about.scss
+++ b/portfolio-react-app/src/styles/_about.scss
@@ -120,7 +120,7 @@
     }
 
     .timeline-line {
-        background-color: $light-blue;
+        background-color: $pink;
         padding: 0.25rem;
         position: absolute;
         left: 2rem;
@@ -135,7 +135,7 @@
         background: white;
         border-radius: 1rem;
         padding: 0.25rem;
-        fill: $light-blue;
+        fill: $pink;
     }
 
     // stack/skills section
