--- a/portfolio-react-app/src/styles/_variables.scss
+++ b/portfolio-react-app/src/styles/_variables.scss
@@ -8,7 +8,7 @@ $text-color: #383C7A;
 $background-color: #EAEFFB;
 $light-purple: #c8cbfd;
 $light-blue: #ACC3F2;
-$pink: #FBC6BF;
+$pink: #fbd1d1;
 
 // Break Points
 $mobile: 20.625em; // 330px
