refactored about blurbs

--- a/portfolio-react-app/src/styles/_splash.scss
+++ b/portfolio-react-app/src/styles/_splash.scss
@@ -26,7 +26,7 @@ body {
     }
 
     button {
-        background-color: $light-purple;
+        background-color: $pink;
         padding: 0.5rem;
     }
 
