--- a/portfolio/src/styles/_home.scss
+++ b/portfolio/src/styles/_home.scss
@@ -33,7 +33,7 @@
         }
 
 
-        img{
+        .folder-svg svg{
             max-width: 50%;
             height: auto;
         }
@@ -73,7 +73,7 @@
                 width: 8rem;
             }
 
-            img{
+            .folder-svg svg{
                 max-width: 80%;
             }
     }}
@@ -104,13 +104,13 @@
                 width: 11rem;
             }
 
-            img{
+            .folder-svg svg{
                 max-width: 80%;
             }
             
-            p {
+            .folder-button p {
                 font-size: 1.5rem;
-                margin: 0.75rem;
+                margin: 0.75rem;  
             }
         }
     }
