--- a/portfolio/src/styles/_singleWork.scss
+++ b/portfolio/src/styles/_singleWork.scss
@@ -6,12 +6,12 @@
     border-radius: 0.5rem;
     border: 2px solid black;
     position: absolute;
-    top: 1rem;
+    top: 1.5rem;
     left: 0.6rem;
     z-index: 100;
-    height: 90vh;
+    height: 85vh;
     width: 90vw;
-    overflow: auto;
+    overflow: auto; 
     margin: 0 1rem;
     font-size: 14px;
     text-align: left;
@@ -86,8 +86,21 @@
         margin: 0;
     }
 
-    p, a, h3 {
-        margin: 1rem 1.5rem;
+    .work-summary {
+        margin: 1rem;
+        margin-bottom: 2rem;
+    }
+
+    .work-details {
+        margin: 1rem;
+
+        h3 {
+            text-decoration: 2px solid underline;
+        }
+    }
+
+    .process {
+        margin: 1rem;
     }
 
     .hide-tab {
@@ -117,9 +130,8 @@
 
         a {
             background-color: $light-purple;
-            color: black;
+            color: $text-color;
             padding: 0.5rem;
-            border: 1.5px black solid;
             border-radius: 0.5rem;
             margin: 0.2rem;
         }
@@ -129,4 +141,123 @@
         margin-top: 1rem;
     }
 
+    .duration h3 {
+        margin-top: 2rem;
+    }
+
+    // 382px
+    @media (min-width: 23.87em) {
+        left: 1rem;
+        width: 87vw;
+        height: 86vh;
+    }
+
+    // 425px mobile large
+    @media (min-width: 26.56em) {
+        height: 85vh;
+        width: 85vw;
+    }
+
+    // 600px
+    @media (min-width: 37.5em){
+        left: 1.75rem;
+        height: 82vh;
+
+        .tab-nav {
+            li {
+                font-size: 1rem;
+            }
+        }
+
+        .overview-heading {
+            padding: 0.1rem 1.75rem;
+            border-top-right-radius: 1.35rem;
+            border-top-left-radius: 1.35rem;
+        }
+
+        .process-heading {
+            padding: 0.1rem 2rem;
+            border-top-right-radius: 1.35rem;
+            border-top-left-radius: 1.35rem;
+        }
+
+        .work-heading h1{
+            font-size: 1.8rem;
+        } 
+
+        p, a { 
+            font-size: 1rem;
+        }
+
+        .links a {
+            padding: 0.75rem;
+            border-radius: 1rem;
+            margin: 0.5rem;
+        }
+
+        .close-button {
+            right: 0.5rem;
+            top: 0.25rem;
+    
+            svg {
+                width: 1.75rem;
+                height: 1.75rem;
+            }
+        }
+
+        .work-summary {
+            margin-top: 2rem;
+        }
+        // process
+        .process h3 {
+            font-size: 18px;
+        }
+    }
+
+     // 768px tablet
+     @media (min-width: 48em) {
+        left: 4.5rem;
+        width: 75vw;
+        height: 80vh;
+        top: 2rem;
+
+        .work-summary, .work-details{
+            margin: 1rem 1.5rem;
+        }
+
+        .work-summary {
+            margin-bottom: 2rem;
+        }
+
+        .work-summary {
+            margin-top: 2rem;
+        }
+
+        .process {
+           h3, a, p {
+            margin: 1rem 1.5rem;
+           }
+        }
+    }
+
+    // 900px
+    @media (min-width: 56.25em) {
+        left: 6rem;
+
+        .work-details {
+            display: grid;
+            grid-template-columns: repeat(4, 20%);
+            margin: 0 2rem;
+            justify-content: center;
+
+            h3 {
+                margin-top: 2rem;
+            }
+        }
+    }
+
+    // 1000px
+    @media (min-width: 62.5em) {
+        left: 6rem;
+    }
 }
